[gd_scene load_steps=17 format=3 uid="uid://cik30de5gaaah"]

[ext_resource type="Script" path="res://scenes/ingame_scene.gd" id="1_objyc"]
[ext_resource type="PackedScene" uid="uid://bhg45iwrlmt61" path="res://assets/models/dome.tscn" id="2_cv5ji"]
[ext_resource type="PackedScene" uid="uid://diquwv3uklemf" path="res://scenes/player/player.tscn" id="3_kyerf"]
[ext_resource type="PackedScene" uid="uid://b3myav8ca5cgh" path="res://scenes/gui/terminal.tscn" id="4_80sin"]
[ext_resource type="PackedScene" uid="uid://c4l283c886ddf" path="res://assets/models/hydrophone.tscn" id="4_ykmf7"]
[ext_resource type="PackedScene" uid="uid://cvih2u8dglq46" path="res://scenes/gui/radar_gui.tscn" id="5_8cjjv"]
[ext_resource type="PackedScene" uid="uid://cwma7hmhthf30" path="res://scenes/gui/drone_gui.tscn" id="6_wb0ro"]
[ext_resource type="AudioStream" uid="uid://gngpf7jliind" path="res://assets/audio/sfx/SFX_UNDERWATER_AMBIENCE_LOOP_1.ogg" id="6_wsitc"]
[ext_resource type="PackedScene" uid="uid://nqd65nhfcn1m" path="res://scenes/gui/hydrophone_gui.tscn" id="8_37bqx"]
[ext_resource type="AudioStream" uid="uid://crfvexitde8yi" path="res://assets/audio/sfx/Footsteps/Metal/sfx_footstep_metal_hard.wav" id="8_jh448"]
[ext_resource type="AudioStream" uid="uid://b88j1iyp41fkj" path="res://assets/audio/sfx/sfx_metal_creak_big_v1.ogg" id="9_aqrr1"]
[ext_resource type="PackedScene" uid="uid://ch3pt48se8yy7" path="res://assets/models/hydrophone.glb" id="10_38com"]
[ext_resource type="PackedScene" uid="uid://c66uk43kn3wig" path="res://assets/models/big_computer.glb" id="10_u7gvk"]
[ext_resource type="PackedScene" uid="uid://q1jw2jbtxere" path="res://assets/models/button.tscn" id="10_v5cgc"]
[ext_resource type="PackedScene" uid="uid://c1i3q0ns6qef1" path="res://assets/models/handle.glb" id="14_ptrm3"]

[sub_resource type="BoxShape3D" id="BoxShape3D_cnahk"]
size = Vector3(0.9, 0.5, 1)

[node name="IngameScene" type="Node2D"]
script = ExtResource("1_objyc")

[node name="dome" parent="." instance=ExtResource("2_cv5ji")]

[node name="SpotLight3D" type="SpotLight3D" parent="."]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 3.74994, 0)
light_energy = 3.0
spot_angle = 70.0

[node name="Player" parent="." instance=ExtResource("3_kyerf")]

[node name="Items" type="Node" parent="."]

[node name="hydrophone" parent="Items" instance=ExtResource("4_ykmf7")]

[node name="Terminals" type="Node" parent="."]

[node name="Terminal" parent="Terminals" instance=ExtResource("4_80sin")]
transform = Transform3D(2, 0, 0, 0, 2, 0, 0, 0, 2, 0, 1.6, -2.39)
gui = ExtResource("5_8cjjv")

[node name="Terminal3" parent="Terminals" instance=ExtResource("4_80sin")]
transform = Transform3D(0.34202, 0, 0.939693, 0, 1, 0, -0.939693, 0, 0.34202, -2.66896, 1.8, -0.858023)
gui = ExtResource("6_wb0ro")
drone = 3

[node name="Terminal5" parent="Terminals" instance=ExtResource("4_80sin")]
transform = Transform3D(0.34202, 0, -0.939693, 0, 1, 0, 0.939693, 0, 0.34202, 2.65714, 1.8, -0.857954)
gui = ExtResource("6_wb0ro")
drone = 2

[node name="Terminal7" parent="Terminals" instance=ExtResource("4_80sin")]
transform = Transform3D(-0.34202, 0, -0.939693, 0, 1, 0, 0.939693, 0, -0.34202, 2.65714, 1.8, 0.938626)
gui = ExtResource("8_37bqx")

[node name="Terminal4" parent="Terminals" instance=ExtResource("4_80sin")]
transform = Transform3D(0.707107, 0, 0.707107, 0, 1, 0, -0.707107, 0, 0.707107, -1.99, 1.8, -1.88784)
gui = ExtResource("6_wb0ro")
drone = 1

[node name="Terminal6" parent="Terminals" instance=ExtResource("4_80sin")]
transform = Transform3D(0.707107, 0, -0.707107, 0, 1, 0, 0.707107, 0, 0.707107, 1.99892, 1.8, -1.88892)
gui = ExtResource("6_wb0ro")

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_wsitc")
volume_db = -10.0
autoplay = true

[node name="Creaks" type="Node" parent="."]

[node name="AudioStreamPlayer3D" type="AudioStreamPlayer3D" parent="Creaks"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.94678, -2.85518)
stream = ExtResource("9_aqrr1")
volume_db = -10.0

[node name="AudioStreamPlayer3D2" type="AudioStreamPlayer3D" parent="Creaks"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2.88025, 2.76235, 0)
stream = ExtResource("9_aqrr1")
volume_db = -10.0

[node name="AudioStreamPlayer3D3" type="AudioStreamPlayer3D" parent="Creaks"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -3.0986, 2.69029, 0)
stream = ExtResource("9_aqrr1")
volume_db = -10.0

[node name="AudioStreamPlayer3D4" type="AudioStreamPlayer3D" parent="Creaks"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 4.1243, 0)
stream = ExtResource("9_aqrr1")
volume_db = -10.0

[node name="big_computer" parent="." instance=ExtResource("10_u7gvk")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -2.4)

[node name="CreakTimer" type="Timer" parent="."]
wait_time = 10.0
autostart = true

[node name="Bonks" type="Node" parent="."]

[node name="AudioStreamPlayer3D" type="AudioStreamPlayer3D" parent="Bonks"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.94678, -2.85518)
stream = ExtResource("8_jh448")

[node name="AudioStreamPlayer3D2" type="AudioStreamPlayer3D" parent="Bonks"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2.88025, 2.76235, 0)
stream = ExtResource("8_jh448")

[node name="AudioStreamPlayer3D3" type="AudioStreamPlayer3D" parent="Bonks"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -3.0986, 2.69029, 0)
stream = ExtResource("8_jh448")

[node name="AudioStreamPlayer3D4" type="AudioStreamPlayer3D" parent="Bonks"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 4.1243, 0)
stream = ExtResource("8_jh448")

[node name="BonkTimer" type="Timer" parent="."]
wait_time = 10.0
autostart = true

[node name="button" parent="." instance=ExtResource("10_v5cgc")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.66023, 1, 2.8566)

[node name="DeliveryArea" type="Area3D" parent="."]
transform = Transform3D(0.707107, 0, -0.707107, 0, 1, 0, 0.707107, 0, 0.707107, 2.3, 1, 2.3)

[node name="CollisionShape3D" type="CollisionShape3D" parent="DeliveryArea"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.05, -0.25, 0)
shape = SubResource("BoxShape3D_cnahk")

[node name="hydrophone" parent="DeliveryArea" instance=ExtResource("10_38com")]
transform = Transform3D(0.9457, 0, -0.32504, 0, 1, 0, 0.32504, 0, 0.9457, 0, -0.298493, 0)
visible = false

[node name="big_computer2" parent="." instance=ExtResource("10_u7gvk")]
transform = Transform3D(0.17101, 0, 0.469846, 0, 0.5, 0, -0.469846, 0, 0.17101, -2.67836, 1, -0.861444)

[node name="big_computer4" parent="." instance=ExtResource("10_u7gvk")]
transform = Transform3D(0.17101, 0, -0.469846, 0, 0.5, 0, 0.469846, 0, 0.17101, 2.66654, 1, -0.861374)

[node name="big_computer6" parent="." instance=ExtResource("10_u7gvk")]
transform = Transform3D(-0.17101, 0, -0.469846, 0, 0.5, 0, 0.469846, 0, -0.17101, 2.66654, 1, 0.942046)

[node name="big_computer3" parent="." instance=ExtResource("10_u7gvk")]
transform = Transform3D(0.353553, 0, 0.353553, 0, 0.5, 0, -0.353553, 0, 0.353553, -2, 1, -1.9)

[node name="big_computer5" parent="." instance=ExtResource("10_u7gvk")]
transform = Transform3D(0.353553, 0, -0.353553, 0, 0.5, 0, 0.353553, 0, 0.353553, 2.01108, 1, -1.89892)

[node name="handle" parent="." instance=ExtResource("14_ptrm3")]
transform = Transform3D(-0.707107, 0.707107, -6.18172e-08, 0.707107, 0.707107, 6.18172e-08, 8.74228e-08, 0, -1, -0.000675321, 1.07195, 3.86675)

[connection signal="timeout" from="CreakTimer" to="." method="_on_creak_timer_timeout"]
[connection signal="timeout" from="BonkTimer" to="." method="_on_bonk_timer_timeout"]
